Verif/Test/Invalide/test_erreur_3.59.deca
// Description:
//    Programme soulevant l'erreur (3.59)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Conversion de 'boolean' en 'int' impossible (règle 3.59)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

int i;
{
   i = cast<int> (true);
}